--- a/SeverGame106/appsettings.json
+++ b/SeverGame106/appsettings.json
@@ -7,6 +7,19 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-   "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=ServerGame106;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=ServerGame106;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=true"
+  },
+  "EmailSettings": {
+    "SmtpServer": "smtp.gmail.com",
+    "SmtpPort": 587,
+    "SenderName": "Game106",
+    "SenderEmail": "ndat39625@gmail.com",
+    "Username": "ndat39625@gmail.com",
+    "Password": "udlu kuky xges rdos"
+  },
+  "Jwt": {
+    "Key": "ServerGame106FPTEdu2024JwtVanDat",
+    "Issuer": "Game106Auth",
+    "Audience": "Game106Auth"
   }
 }
